image as a canvas. fix text overflow

--- a/assets/css/BlockView.css
+++ b/assets/css/BlockView.css
@@ -177,3 +177,8 @@
   top: 116px;
   left: 166px;*/
 }
+
+.clone {
+  position: absolute;
+  overflow: hidden;
+}
